Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -2289,6 +2289,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ba7ccfa9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f44f2a80",
+   "metadata": {},
+   "source": [
+    "* Operación: Dataset equilibrado (51.75% ventas vs 48.25% alquiler)\n",
+    "* Fuente:Distribución más o menos equilibrada, siendo Milanuncios la fuente con mayor % de publicaciones (39.93%), seguido de Fotocasa (33.75%) y Habitaclia (26.32%). ¿¿DONDE ESTAN LOS DATOS DE IDEALISTA??\n",
+    "* Anunciante: El mercado esta muy profesionalizado, 88.52% de los anunciantes son profesioanles mientras que 11.48% son particulares.\n",
+    "*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15eca706",
+   "metadata": {},
+   "source": [
+    "**Analisis variables binarias**"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "id": "39e5d12a",
    "metadata": {},
