Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -2300,10 +2300,11 @@
    "id": "f44f2a80",
    "metadata": {},
    "source": [
+    "# Conclusiones #\n",
     "* Operación: Dataset equilibrado (51.75% ventas vs 48.25% alquiler)\n",
     "* Fuente:Distribución más o menos equilibrada, siendo Milanuncios la fuente con mayor % de publicaciones (39.93%), seguido de Fotocasa (33.75%) y Habitaclia (26.32%). ¿¿DONDE ESTAN LOS DATOS DE IDEALISTA??\n",
-    "* Anunciante: El mercado esta muy profesionalizado, 88.52% de los anunciantes son profesioanles mientras que 11.48% son particulares.\n",
-    "*\n"
+    "* Anunciante: El mercado esta muy profesionalizado, 88.52% de los anunciantes son profesioanles mientras que 11.48% particulares.\n",
+    "* Demanda: 69% de los pisos tienen baja demanda (50.57% + 18.56%), lo que puede indicar que las viviendas están publicadas a precios por encima de lo que la gente está dispuesta a pagar, y por eso no reciben interés. \n"
    ]
   },
   {
