Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -2524,6 +2524,22 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc001bdc",
+   "metadata": {},
+   "source": [
+    "**Conclusiones variables binarias**\n",
+    "\n",
+    "*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db5fe32d",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
