Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -2532,7 +2532,11 @@
    "source": [
     "**Conclusiones variables binarias**\n",
     "\n",
-    "*"
+    "* Ascensor: amenity más presente en los inmuebles (67.6%). Aun así, 1 de cada 3 viviendas no tiene ascensor, lo que apunta a edificios antiguos. ¿Es posible que los pisos en plantas altas tenga mayores descuentos en el precios por esto?\n",
+    "* Aire acondicionado: 57.9% tienen aire acondicionado. Teniendo en cuenta el clima de Valencia esto podría apuntar a viviendas antiguas (en verano el caloret se nota mucho)\n",
+    "* Garaje: Solo 1 de cada 5 viviendas dispone de garaje (21.8%). ¿los inmuebles en venta probablemente estén bastante por encima de este % y los inmuebles en alquiler por debajo?\n",
+    "* Piscina, zonas verdes y zonas deportivas: ¿Quizás dentro de los inmuebles en alquiler haya mucha vivienda antigua y con poco equipamiento comunitario? ¿Quizás dentro de los inmuebles en venta pueda haber viviendas de obra nueva con más presencia de estos servicios? Analizar según operacion. \n",
+    "*Terraza: Hay muchas viviendas sin terraza. Podemos intentar explorar si existen diferencias entre viviendas en venta y en alquiler. "
    ]
   },
   {
