Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -7794,10 +7794,10 @@
    "metadata": {},
    "source": [
     "# Conclusiones #\n",
-    "* Operación: Dataset equilibrado (51.75% ventas vs 48.25% alquiler)\n",
-    "* Fuente:Distribución más o menos equilibrada, siendo Milanuncios la fuente con mayor % de publicaciones (39.93%), seguido de Fotocasa (33.75%) y Habitaclia (26.32%). Dentro de las fuentes, ver que % de profesionales/particulares publican viviendas en estos portales.\n",
-    "* Anunciante: El mercado esta muy profesionalizado, 88.52% de los anunciantes son profesioanles mientras que 11.48% particulares.\n",
-    "* Demanda: 60% de los pisos tienen baja demanda (50.57% + 8.65%), lo que puede indicar que las viviendas están publicadas a precios por encima de lo que la gente está dispuesta a pagar, que hay okupas, que los anuncios están incompletos (faltan imagenes o las imagenes incluidas de baja calidad/no muestra el interior de la vivienda) y por eso no reciben interés. \n"
+    "* Operación: Dataset equilibrado (51.67% ventas vs 48.33% alquiler)\n",
+    "* Fuente:Distribución más o menos equilibrada, siendo Fotocasa la fuente con mayor % de publicaciones (36.17%), seguido de Habitaclia (32.71%) y MilAnuncios (31.12%). Dentro de las fuentes, ver que % de profesionales/particulares publican viviendas en estos portales.\n",
+    "* Anunciante: El mercado esta muy profesionalizado, 94.24% de los anunciantes son profesioanles mientras que 5.76% particulares.\n",
+    "* Demanda: 72,14% de los pisos tienen baja demanda (66.24% + 5.90%), lo que puede indicar que las viviendas están publicadas a precios por encima de lo que la gente está dispuesta a pagar, que hay okupas, que los anuncios están incompletos (faltan imagenes o las imagenes incluidas de baja calidad/no muestra el interior de la vivienda) y por eso no reciben interés. \n"
    ]
   },
   {
@@ -8033,11 +8033,12 @@
    "source": [
     "**Conclusiones variables binarias**\n",
     "\n",
-    "* Ascensor: amenity más presente en los inmuebles (67.6%). Aun así, 1 de cada 3 viviendas no tiene ascensor, lo que apunta a edificios antiguos o que no hay espacio para un ascensor. ¿Es posible que los pisos en plantas altas tenga mayores descuentos en el precios por esto? (no se puede analizar por falta de datos)\n",
-    "* Aire acondicionado: 57.9% tienen aire acondicionado. Teniendo en cuenta el clima de Valencia esto podría apuntar a viviendas antiguas (en verano el caloret se nota mucho)\n",
-    "* Garaje: Solo 1 de cada 5 viviendas dispone de garaje (21.8%). ¿los inmuebles en venta probablemente estén bastante por encima de este % y los inmuebles en alquiler por debajo?\n",
+    "* Ascensor: amenity más presente en los inmuebles (72.41%). Aun así, 1 de cada 3 viviendas no tiene ascensor, lo que apunta a edificios antiguos o que no hay espacio para un ascensor. ¿Es posible que los pisos en plantas altas tenga mayores descuentos en el precios por esto? (no se puede analizar por falta de datos)\n",
+    "* Aire acondicionado: 66.96% tienen aire acondicionado. Teniendo en cuenta el clima de Valencia esto podría apuntar a viviendas antiguas (en verano el caloret se nota mucho)\n",
+    "* Garaje: Solo 1 de cada 5 viviendas dispone de garaje (26.93%). ¿los inmuebles en venta probablemente estén bastante por encima de este % y los inmuebles en alquiler por debajo?\n",
+    "* Trastero: 22,88% de las viviendas tienen trastero. Podriamos analizarlo por operacion, ¿quizas en Venta este % podría ser mayor?\n",
     "* Piscina, zonas verdes y zonas deportivas: ¿Quizás dentro de los inmuebles en alquiler haya mucha vivienda antigua y con poco equipamiento comunitario? ¿Quizás dentro de los inmuebles en venta pueda haber viviendas de obra nueva con más presencia de estos servicios? Analizar según operacion. \n",
-    "* Terraza: Hay muchas viviendas sin terraza. Podemos intentar explorar si existen diferencias entre viviendas en venta y en alquiler. "
+    "* Terraza: Hay muchas viviendas sin terraza (85.90%). Podemos intentar explorar si existen diferencias entre viviendas en venta y en alquiler. "
    ]
   },
   {
