Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -7794,7 +7794,7 @@
    "metadata": {},
    "source": [
     "# Conclusiones #\n",
-    "* Operación: Dataset equilibrado (51.67% ventas vs 48.33% alquiler)\n",
+    "* Operación: Dataset equilibrado (51.67% ventas vs 48.33% alquiler). Incluso para alquiler se usa inmobilaria? Analizar por operacion\n",
     "* Fuente:Distribución más o menos equilibrada, siendo Fotocasa la fuente con mayor % de publicaciones (36.17%), seguido de Habitaclia (32.71%) y MilAnuncios (31.12%). Dentro de las fuentes, ver que % de profesionales/particulares publican viviendas en estos portales.\n",
     "* Anunciante: El mercado esta muy profesionalizado, 94.24% de los anunciantes son profesioanles mientras que 5.76% particulares.\n",
     "* Demanda: 72,14% de los pisos tienen baja demanda (66.24% + 5.90%), lo que puede indicar que las viviendas están publicadas a precios por encima de lo que la gente está dispuesta a pagar, que hay okupas, que los anuncios están incompletos (faltan imagenes o las imagenes incluidas de baja calidad/no muestra el interior de la vivienda) y por eso no reciben interés. \n"
