Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -8749,8 +8749,8 @@
     "\n",
     "ALQUILER\n",
     "\n",
-    "* La mayoría de los alquileres están entre 1100 euros (Q1) y 1700 euros (Q3) al mes.\n",
-    "* La mediana de 1400 euros es el alquiler típico. Se paga típicamente 15€ por cada metro cuadrado al mes.\n",
+    "* La mayoría de los alquileres están entre 1100€ (Q1) y 1700€ (Q3) al mes.\n",
+    "* La mediana de 1400€ es el alquiler típico. Se paga típicamente 15€ por cada metro cuadrado al mes.\n",
     "* La mayoría de las viviendas alquiler tienen entre 71 (Q1) y 112 (Q3) metros cuadrados. El piso típico en alquiler tiene 90 metros cuadrados (mediana).\n",
     "* Lo más común son pisos de 3 habitaciones (mediana).\n",
     "* La mayoría tienen 1 baño (mediana).\n",
