Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -9105,6 +9105,44 @@
     "La VENTA tiene más sobreoferta:\n",
     "* 69,8% de ventas tienen demanda \"Muy Baja\", lo cual indica que hay más pisos en venta de los que la gente quier comprar.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2f304cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Analisis bivariante: Categorica vs Numerica\n",
+    "\n",
+    "\n",
+    "#Precio unitario vs Distrito (top 10) #distritos céntricos y de playa más caros??\n",
+    "\n",
+    "#Precio unitario vs Barrio (top 10)\n",
+    "\n",
+    "#Precio unitario vs Amenities en viviendas en Venta (Queremos saber cuánto valor añade un amenity al precio de un piso)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43a94bfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Analisis Multivariante: Numerica vs Numerica\n",
+    "\n",
+    "#Hacer matriz de correlacion (VENTA) comparando todas las variables numericas entre sí para ver si tienen relacion\n",
+    "#variables: precio, precio unitario, superficie, dormitorios, baños"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fa1e147",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
