Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -6674,7 +6674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "id": "bd1b6777",
    "metadata": {},
    "outputs": [
@@ -6689,7 +6689,7 @@
    ],
    "source": [
     "# Imputamos valores faltantes en Precio y Precio unitario\n",
-    "# ay valores negativos que son errores de datos, los convertimos a NaN\n",
+    "# Hay valores negativos que son errores, los convertimos a NaN\n",
     "df_limpio.loc[df_limpio['Precio unitario'] <= 0, 'Precio unitario'] = np.nan\n",
     "df_limpio.loc[df_limpio['Precio'] <= 0, 'Precio'] = np.nan\n",
     "\n",
@@ -9116,9 +9116,9 @@
     "#Analisis bivariante: Categorica vs Numerica\n",
     "\n",
     "\n",
-    "#Precio unitario vs Distrito (top 10) #distritos céntricos y de playa más caros??\n",
+    "#Precio unitario vs Distrito (top 10) #distritos céntricos y de playa más caros?? ¿Podemos ver cuales son los 10 distritos más baratos?\n",
     "\n",
-    "#Precio unitario vs Barrio (top 10)\n",
+    "#Precio unitario vs Barrio (top 10)m#podemos ver cuales son los 10 barrios más baratos?\n",
     "\n",
     "#Precio unitario vs Amenities en viviendas en Venta (Queremos saber cuánto valor añade un amenity al precio de un piso)\n"
    ]
