Update ETL-Datos Alquiler y casas.ipynb

--- a/ETL-Datos Alquiler y casas.ipynb
+++ b/ETL-Datos Alquiler y casas.ipynb
@@ -9192,7 +9192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "a2f304cd",
    "metadata": {},
    "outputs": [
@@ -9325,7 +9325,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "    \n",
-    "    # GRÁFICO ESTÉTICO - TOP 10 MÁS BARATOS\n",
+    "    # GRÁFICO TOP 10 MÁS BARATOS\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(12, 8))\n",
     "    \n",
