--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5a2452c9",
+   "metadata": {},
+   "source": [
+    "<img src=\"./src/img/3.png\" style=\"width: 100%; display: block; margin: 0; padding: 0;\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "id": "4b3d5fde",
