--- a/main.ipynb
+++ b/main.ipynb
@@ -3371,6 +3371,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d413155",
+   "metadata": {},
+   "source": [
+    "<img src=\"src/img/2.png\" width=\"300\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "22b2b9e7",
    "metadata": {},
    "source": [
