--- a/main.ipynb
+++ b/main.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "928c96e3",
+   "metadata": {},
+   "source": [
+    "![Python](https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54)\n",
+    "![Pandas](https://img.shields.io/badge/pandas-%23150458.svg?style=for-the-badge&logo=pandas&logoColor=white)\n",
+    "![Seaborn](https://img.shields.io/badge/Seaborn-blue?style=for-the-badge)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "id": "4b3d5fde",
